сделал добавление и получение поставщиков
